--- a/src/app/components/admins/dashboard/dashboard.component.html
+++ b/src/app/components/admins/dashboard/dashboard.component.html
@@ -1,3 +1,4 @@
+<ngx-spinner bdColor = "rgba(0, 0, 0, 0.8)" size = "medium" color = "#fff" type = "ball-scale-multiple" [fullScreen] = "true"><p style="color: white" > Chargement... </p></ngx-spinner>
 <div class="principal-container">
     <div class="admin-profile-container">
         <div class="greet-container">
