--- a/src/app/components/UI/footer/footer.component.css
+++ b/src/app/components/UI/footer/footer.component.css
@@ -1,10 +1,14 @@
 .footer{
     width: 100%;
-    height: 28px;
+    height: 7vh;
     background-color: #334DAA;
     color: white;
     font-size: 9px small;    
 }
 .footer p span{
     margin: 18px 100px 10px ;
+}
+
+a:visited {
+    color: #F6C434;
 }
