--- a/src/app/components/UI/footer/footer.component.html
+++ b/src/app/components/UI/footer/footer.component.html
@@ -1,3 +1,3 @@
 <div class="footer">
-  <p>&copy; 2025 CollabDev. <span> Nous contacter</span></p>
+  <p>&copy; 2025 CollabDev. <a href="">Nous contacter</a></p>
 </div>
