--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -15,12 +15,13 @@
   gap: 20px;
   align-items: center;
   justify-content: center;
-  height: 90vh;
+  height: 100vh;
   background-color: #FFFFFF;
   animation: fadeInUp 0.6s ease-out;
   /* padding: 0 20px; */
   box-sizing: border-box;
   overflow: hidden;
+  align-self: center;
 }
 
 /* ===== CÔTÉ LOGIN ===== */
@@ -137,7 +138,7 @@ input[type="submit"]:disabled {
   /* gap: 10px; */
   width: 100%;
   height: 100%;
-  max-height: 90vh;
+  max-height: 80vh;
   /* padding: 10px; */
   box-sizing: border-box;
 }
