--- a/src/app/components/tools/sidebar-menu-porteur/sidebar-menu-porteur.component.html
+++ b/src/app/components/tools/sidebar-menu-porteur/sidebar-menu-porteur.component.html
@@ -36,19 +36,19 @@
         @if(currentMenu == 2){
         <i class="ri-lightbulb-flash-fill icons"></i>
         @if (getIsExpanded()) {
-        <p class="menus-text"><strong>Les idées de projet</strong></p>
+        <p class="menus-text"><strong>Idées de projet</strong></p>
         } } @else {
         <i class="ri-lightbulb-flash-line icons"></i>
         @if (getIsExpanded()) {
-        <p class="menus-text">Les idées de projet</p>
+        <p class="menus-text">Idées de projet</p>
         } }
       </div>
-      <div
+      <!-- <div
         class="project-ideas-container menu-container"
         [class.collapsed]="!getIsExpanded()"
         (click)="goToMenu(6)"
       >
-        @if(currentMenu == 6){
+         @if(currentMenu == 6){
         <i class="ri-layout-masonry-fill icons"></i>
         @if (getIsExpanded()) {
         <p class="menus-text"><strong>Mes idées</strong></p>
@@ -57,7 +57,7 @@
         @if (getIsExpanded()) {
         <p class="menus-text">Mes idées</p>
         } }
-      </div>
+      </div> -->
       <!-- <div class="project-ideas-container menu-container"  [class.collapsed]="!getIsExpanded()" (click)="goToMenu(7)">
                 @if(currentMenu == 7){
                     <i class="ri-folder-add-fill icons"></i>
@@ -118,7 +118,7 @@
         <p class="menus-text">Profil</p>
         } }
       </div>
-      <div
+      <!-- <div
         class="contributions-container menu-container"
         [class.collapsed]="!getIsExpanded()"
         (click)="goToMenu(3)"
@@ -132,7 +132,7 @@
         @if (getIsExpanded()) {
         <p class="menus-text">Contenus suivis</p>
         } }
-      </div>
+      </div> -->
     </div>
     <div class="side-footer-container" [class.collapsed]="!getIsExpanded()">
       @if(getIsExpanded()) {
