La correction de certaines parties

--- a/src/app/components/contributeur/accueil-contributeur/accueil-contributeur.component.html
+++ b/src/app/components/contributeur/accueil-contributeur/accueil-contributeur.component.html
@@ -133,7 +133,7 @@
 
     <div class="modal-actions">
       <button class="btn-secondary" (click)="fermer()">Annuler</button>
-      <button class="btn-primary" (click)="valider(projet.id)">Envoyer la demande</button>
+      <button class="btn-primary" (click)="valider()">Envoyer la demande</button>
     </div>
   </div>
 </div>
